coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__memory_then_tool_error_order.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCO v0.1.0                                                               
 │●│ │●│  opus-4  *  auto                                                           
 ╰─╯ ╰─╯  /repo                                                                     
                                                                                    
❯ read the memory-guided file                                                       
                                                                                    
◆ memory · CLAUDE.md                                                                
                                                                                    
● Read(missing.txt)                                                                 
  └ File does not exist: missing.txt                                                
                                                                                    
────────────────────────────────────────────────────────────────────────────────────
❯                                                                                   
────────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto | ↑0 ↓0 · cache 0/0% | ctx -- | →1 ←1 · tool 1                       
 ? ask · shift+tab to cycle                                                         
 repo
