coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__model_fallback_banner.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCO v0.0.0                                                           
 │●│ │●│  sonnet-4-6  *  auto                                                   
 ╰─╯ ╰─╯                                                                        
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
 sonnet-4-6 * auto | show thinking(F2):off | ↑0 ↓0 · cache 0% | ctx 0% | 0 msgs
