coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__parallel_tool_batch.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮   COCO v0.0.0                                                          
 │●│ │●│   opus-4  *  auto                                                      
 ╰─╯ ╰─╯                                                                        
                                                                                
❯ Investigate                                                                   
                                                                                
  ‖ 3 in parallel                                                               
  ● Bash(ls -la)                                                                
  ● Read(src/main.rs)                                                           
  ● Grep(TODO)                                                                  
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯ Type a message...                                                             
────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto | ↑0 ↓0 · cache 0% | ctx 0% | 4 msgs
