coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__permission_overlay.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮   COCO v0.0.0                                                          
 │●│ │●│   opus-4  *  auto                                                      
 ╰─╯ ╰─╯                                                                        
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯           ┌ Bash [HIGH] ─────────────────────────────────────────┐            
────────────│Execute shell command                                 │────────────
 opus-4 * au│                                                      │            
            │Command:                                              │            
            │  $ rm -rf /tmp/test                                  │            
            │                                                      │            
            │Directory: /home/user/project                         │            
            │                                                      │            
            │⚠ Removes files recursively                           │            
            │                                                      │            
            │[Y] Approve  [N] Deny  [A] Always Allow               │            
            │                                                      │            
            │                                                      │            
            └──────────────────────────────────────────────────────┘
