coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__permission_prompt.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCO v0.0.0                                                           
 │●│ │●│  opus-4  *  auto                                                       
 ╰─╯ ╰─╯                                                                        
                                                                                
┌ Bash [HIGH] ─────────────────────────────────────────────────────────────────┐
│...                                                                           │
│Actions:                                                                      │
│▸ Yes, approve once                                                           │
│  Yes, and don't ask again for Bash                                           │
│  No, deny                                                                    │
│↑/↓ Navigate  Enter Select  Y/N/A shortcuts                                   │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto | ↑0 ↓0 · cache 0/0% | ctx -- | →0 ←0
