coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__plan_mode.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮   COCO v0.0.0                                                          
 │●│ │●│   opus-4  *  auto                                                      
 ╰─╯ ╰─╯                                                                        
 ⚠ Permission: plan — read-only exploration. Writes require /plan exit.         
                                                                                
❯ Plan the implementation                                                       
                                                                                
 Plan Mode ─────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto, plan mode on | ↑0 ↓0 · cache 0% | ctx 0% | 1 msgs
