coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__prompt_suggestion_placeholder.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮   COCO v0.0.0                                                          
 │●│ │●│   opus-4  *  auto                                                      
 ╰─╯ ╰─╯                                                                        
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯ Run the failing tests                                                         
────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto | ↑0 ↓0 · cache 0% | ctx 0% | 0 msgs
